--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,11 +1,11 @@
 # Logs
 logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+* console.log
+npm-debug console.log*
+yarn-debug console.log*
+yarn-error console.log*
+pnpm-debug console.log*
+lerna-debug console.log*
 
 node_modules
 dist
